# Pink-Wall

./: CMakeLists.txt  README.md
Source/: BackgroundImage.cpp  BackgroundImage.h  CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/AudioBackend/: AudioBackend.cpp  AudioBackend.h  Brickwall.cpp  Brickwall.h  CMakeLists.txt  Filter.cpp  Filter.h  LoadCsv.cpp  LoadCsv.h  TestAudioBackend.cpp
Test/: test_5_brickwall_reduc_6dB_output.csv  test_csv_load.csv
